# tcxOpenCV

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  addon.json
example-basic/: addons.make
example-basic/src/: tcApp.cpp  tcApp.h
src/: tcxCvConvert.h  tcxOpenCV.h  tcxOpenCv.h
